# CS_574

./: .gitignore  nlp-beginner-text-classification-using-lstm.ipynb  pyproject.toml
lab_1/: improvement.ipynb  nlp-beginner-text-classification-using-lstm.ipynb
lab_2/: transformers.ipynb
