[project]
name = "cs-574"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "wordcloud>=1.9.4",
]
